refactor: replace EscapingTokenizer with JLine DefaultParser (#52)
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>